tests/custom/dominance/01-multiple/stderr.expected
Error:
    dominance.essence:15:1:
unexpected incomparability_function
expecting <->, end of input, operator, rest of statement, or statement
    incomparability_function ascending 42
    ^
